<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgrok">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/text19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView26"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:text="@string/text5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:text="@string/text13"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView24"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:text="@string/text15"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/livPost"
        android:layout_weight="1"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

</RelativeLayout>