<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/backgrok">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button3"
        android:id="@+id/linMain"
        android:layout_margin="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">
                <TextView
                    android:text="@string/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="30sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText19"
                    android:background="@drawable/shape_button_green"
                    android:hint="@string/text9" />

                <TextView
                    android:text="@string/text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textSize="30sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:background="@drawable/shape_button_green"
                    android:id="@+id/editText21"

                    android:hint="@string/text9"
                    android:gravity="top|center_vertical" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="46dp">


                    <TextView
                        android:text="@string/text16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_weight="0.01" />


                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView16"
                        android:layout_weight="0.06" />

                    <TextView
                        android:text="@string/text17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView20"
                        android:layout_weight="0.01" />

                    <Spinner
                        android:layout_width="76dp"
                        android:layout_height="match_parent"
                        android:id="@+id/spinner"
                        android:layout_weight="0.03" />
                </LinearLayout>

                <TextView
                    android:text="@string/text22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView37"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    android:textSize="24sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:layout_weight="0.59">

                    <ImageView
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:layout_weight="1"
                        android:layout_margin="15dp"
                        android:background="@drawable/uptopost1"
                        android:layout_width="wrap_content" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:layout_weight="1"
                        android:layout_margin="15dp"
                        android:background="@drawable/uptopost2" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="clickSaveDataMemuFarm2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>