<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ggg">

    <Button
        android:text="@string/confirm_serve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_weight="1"
        android:onClick="clickSaveData"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/name_tile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:autoText="false"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="24sp" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:layout_weight="1"
                android:text="@string/text2"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText7"
                android:layout_weight="1"
                android:hint="@string/name_register"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText9"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:hint="@string/add" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText10"
                android:layout_weight="1"
                android:hint="@string/email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText11"
                android:layout_weight="1"
                android:hint="เบอร์โทรศัพท์"
                android:textSize="18sp"
                android:maxLength="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:autoText="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="13"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText12"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:hint="@string/key"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_weight="1"
                android:text="@string/text1"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText8"
                android:layout_weight="1"
                android:hint="@string/name_user"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText13"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="รหัสผ่าน" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@drawable/shape_button_green"
                android:id="@+id/editText14"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="ยืนยันรหัสผ่าน" />

        </LinearLayout>

        <ImageView
            android:layout_height="100dp"
            android:id="@+id/imageView8"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/adduser"
            android:layout_width="100dp" />

    </LinearLayout>


</RelativeLayout>